--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <title>技能树</title>
 </head>
 <body>
-  
+  <div>
+    初始化
+  </div>
+  <div>
+    初始化
+  </div>
+  <div>
+    初始化
+  </div>
+  <div>
+    初始化
+  </div>
+  <div>
+    初始化
+  </div>
 </body>
 </html>
