--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     初始化11111
   </div>
   <div>
-    初始化
+    初始化mster
   </div>
   <div>
-    初始化
+    初始化master
   </div>
   <div>
-    初始化
+    初始化master
   </div>
   <div>
-    初始化
+    初始化master
   </div>
 </body>
 </html>
