--- a/index.html
+++ b/index.html
@@ -7,20 +7,10 @@
   <title>技能树</title>
 </head>
 <body>
-  <div>
-    初始化11111
-  </div>
-  <div>
-    初始化mster
-  </div>
-  <div>
-    初始化master
-  </div>
-  <div>
-    初始化master
-  </div>
-  <div>
-    初始化master
-  </div>
+  <div>react native</div>
+  <ul>
+    <li><a href="">组件</a></li>
+  </ul>
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
