--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>技能树</title>
+  <style>
+    * {
+      margin:0;
+      padding:0;
+    }
+    .container{
+      width: 1200px;
+      margin:0
+    }
+  </style>
 </head>
 <body>
-  <div>react native</div>
-  <ul>
-    <li><a href="">组件</a></li>
-  </ul>
+  <div class="container">
+      <div>react native</div>
+      <ul>
+        <li><a href="">组件</a></li>
+      </ul>
+  </div>
+  
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
