--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1" />
+
   <title>技能树</title>
-  <style>
-    * {
-      margin:0;
-      padding:0;
-    }
-    .container{
-      width: 1200px;
-      margin:0
-    }
-  </style>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
   <div class="container">
-      <div>react native</div>
-      <ul>
-        <li><a href="">组件</a></li>
-      </ul>
+    <div>react native2</div>
+    <ul>
+      <li><a href="">组件</a></li>
+    </ul>
   </div>
   
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
