--- a/index.html
+++ b/index.html
@@ -1,23 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1" />
-
-  <title>技能树</title>
-  <link rel="stylesheet" href="./css/index.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>jquery目录树插件|DEMO_jQuery之家-自由分享jQuery、html5、css3的插件库</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css">
+	<link href="css/file-explore.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="container">
-    <div>react native2</div>
-    <ul>
-      <li><a href="">组件</a></li>
-    </ul>
-  </div>
-  
-  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+	<div class="htmleaf-container">
+		<header class="htmleaf-header">
+			<h1>React Native技能树</h1>
+		</header>
+		<div class="container">
+			<!-- <h1>React Native</h1> -->
+			<ul class="file-tree">
+				<li>
+					<a href="#">组件</a>
+					<ul>
+						<li>
+							<a href="#">导航栏</a> 
+							<ul>
+								<li><a href="#">导航栏在不同的页面有不同的样式</a> </li>
+							</ul>
+						</li>
+						<li>
+							<a href="#link2">列表组件</a>
+							<ul>
+								<li>上拉加载</li>
+								<li>下拉刷新</li>
+								<li>数据全部加载提示</li>
+							</ul> 
+						</li>
+						<li>
+							<a href="#link2">Loading组件</a>
+							<ul>
+								<li>上拉加载</li>
+							</ul> 
+						</li>
+						<li>
+							<a href="#link2">背景渐变组件</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">错误</a>
+					<ul>
+						<li><a href="#">Link 1</a> </li>
+						<li><a href="#">Link 2</a> </li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">经验</a>
+					<ul>
+						<li><a href="#">Link 1</a> </li>
+						<li><a href="#">Link 2</a> </li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">升级</a>
+					<ul>
+						<li><a href="#">Link 1</a> </li>
+						<li><a href="#">Link 2</a> </li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">兼容</a>
+					<ul>
+						<li><a href="#">Link 1</a> </li>
+						<li><a href="#">Link 2</a> </li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">待续</a>
+					<ul>
+						<li><a href="#"></a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		
+	</div>
+	<script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
+	<script src="js/file-explore.js"></script> 
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$(".file-tree").filetree({
+			});
+		});
+	</script>
 </body>
 </html>
