--- a/index.html
+++ b/index.html
@@ -19,8 +19,34 @@
 			<!-- <h1>React Native</h1> -->
 			<ul class="file-tree">
 				<li>
-					<a href="#">组件</a>
+					<a href="#">简易组件</a>
 					<ul>
+						<li>
+							<a href="#link2">路由组件</a>
+							<ul>
+								<li><a href="#">react-native-router-flux</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#link2">启动屏</a>
+							<ul>
+								<li><a href="#">launch image(screen)</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#link2">scheme</a>
+							<ul>
+								<li><a href="#">深度链接</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#link2">sdk</a>
+							<ul>
+								<li><a href="#">网信账户充值</a></li>
+								<li><a href="#">sdk的引入流程</a></li>
+								<li><a href="#">sdk的依赖安装</a></li>
+							</ul>
+						</li>
 						<li>
 							<a href="#">导航栏</a> 
 							<ul>
@@ -56,7 +82,7 @@
 				<li>
 					<a href="#">经验</a>
 					<ul>
-						<li><a href="#">Link 1</a> </li>
+						<li><a href="#">真机 network request failed（网络请求错误）</a> </li>
 						<li><a href="#">Link 2</a> </li>
 					</ul>
 				</li>
@@ -68,12 +94,25 @@
 					</ul>
 				</li>
 				<li>
+					<a href="#">代码迁移</a>
+					<ul>
+						<li><a href="#">注意事项</a> </li>
+						<li><a href="#">Link 2</a> </li>
+					</ul>
+				</li>
+				<li>
 					<a href="#">兼容</a>
 					<ul>
 						<li><a href="#">Link 1</a> </li>
 						<li><a href="#">Link 2</a> </li>
 					</ul>
 				</li>
+				<li>
+						<a href="#">热更新</a>
+						<ul>
+							<li><a href="#">react-native-code-push</a> </li>
+						</ul>
+					</li>
 				<li>
 					<a href="#">待续</a>
 					<ul>
