--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 <body>
 	<div class="htmleaf-container">
 		<header class="htmleaf-header">
-			<h1>React Native技能树</h1>
+			<h1>React Native技能树wulicoang</h1>
 		</header>
 		<div class="container">
 			<!-- <h1>React Native</h1> -->
 			<ul class="file-tree">
 				<li>
-					<a href="#">简易组件</a>
-					<ul>
+					<a href="#">简易组件</a><ul>
 						<li>
 							<a href="#link2">路由组件</a>
 							<ul>
-								<li><a href="#">react-native-router-flux</a></li>
+								<li>
+									<a href="#">react-native-router-flux</a>
+								</li>
 							</ul>
 						</li>
 						<li>
